fix issue with order name not showing, style it

--- a/VendorAndOrder/wwwroot/css/styles.css
+++ b/VendorAndOrder/wwwroot/css/styles.css
@@ -17,3 +17,6 @@
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+.hidden {
+  display: none;
+}
